tests/errors/type_mismatch_greater_than.dang
# Test greater than comparison type mismatch
let result = "hello" > 42
